Remove code formatting and pagination